# ESP32-S3-MicroPython-Setup

./: README.md  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
raspberry-pi-hub/: .gitignore  README.md  cctv-hub.service  cctv_hub.py  config.example.json  requirements.txt  setup.sh
stubs/: camera.py  network.py
tests/: test_main.py
