[tool.poetry]
name = "esp32-s3-micropython-setup"
version = "0.2.0"
description = "ESP32-S3 camera streaming server with MicroPython"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
esptool = "4.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-embedded-serial-esp = "1.10.2"
ruff = ">=0.4"
pre-commit = ">=3.0"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache", "stubs"]
extraPaths = ["stubs"]

[tool.ruff]
exclude = ["stubs"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
